--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Sheldon</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../static/styles.css">
         <script src="https://kit.fontawesome.com/a79e9c589c.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
