--- a/templates/index.html
+++ b/templates/index.html
@@ -32,4 +32,5 @@
                 <i class="fas fa-paper-plane"></i>
             </button>
         </div>
+        <script src="../static/app.js"></script>
     </body>
