--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                     <li>How to build a resume?</li>
                     <li>Are projects important?</li>
                     <li>What is github?</li>
-                    <li>How to make a linkedIn</li>
+                    <li>How to make a linkedIn?</li>
                 </ul>
             </div>
         </div>
