--- a/templates/resume_template.html
+++ b/templates/resume_template.html
@@ -3,22 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Resume Template</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/resume_styles.css">
 </head>
 <body>
     <header>
-        <h1>{{ resume['firstName'] }} {{ resume['lastName'] }}</h1>
-        <p>{{ resume['email'] }}</p>
-        <p>{{ resume['phone'] }}</p>
-        <!-- Additional contact information -->
+        <div class="header_name">
+            <h1>{{ resume['firstName'] }} {{ resume['lastName'] }}</h1>
+        </div>
+        <div class="header_address">
+            <p>{{ resume['address'] }}, {{ resume['city'] }}, {{ resume['state'] }}, {{ resume['zip'] }}, {{ resume['country']}}</p>
+            <p></p>
+        </div>
+        <div class="header_contact">
+            <p>{{ resume['email'] }}    {{ resume['phone'] }}   {{ resume['LinkedIn'] }}    {{ resume['GitHub'] }}</p>
+        </div>
     </header>
+
     <section class="education">
         <h2>Education</h2>
         <ul>
-            <li>{{ education['degree'] }}</li>
-            <!-- Additional education details -->
+            {% for education in resume['education'] %}
+                <li>
+                    <h3>{{ education['school'] }}</h3>
+                    <p>{{ education['degree'] }}</p>
+                    <p>{{ education['major'] }}</p>
+                    <p>{{ education['startedDate'] }} - {{ education['graduationDate'] }}</p>
+                    <p>{{ education['gpa'] }}</p>
+                </li>
+            {% endfor %}
         </ul>
     </section>
+
     <section class="experience">
         <h2>Experience</h2>
         <ul>
@@ -33,12 +48,27 @@
             {% endfor %}
         </ul>
     </section>
+
+    <section class="projects">
+        <h2>Projects</h2>
+        <ul>
+            {% for project in resume['projects'] %}
+                <li>
+                    <h3>{{ project['name'] }}</h3>
+                    <p>{{ project['technologies'] }}</p>
+                    <p>{{ project['description'] }}</p>
+                </li>
+            {% endfor %}
+        </ul>
+
     <section class="skills">
         <h2>Skills</h2>
         <ul>
-            <li>{{ skills['skill1'] }}</li>
-            <li>{{ skills['skill2'] }}</li>
-            <!-- Additional skills -->
+            <ul>
+                <li>Languages</li>
+                <li>Developer Tools</li>
+                <li>Frameworks</li>
+            </ul>
         </ul>
     </section>
 </body>
