application running without the generate resume func

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,11 @@
                     <li>How to make a linkedIn?</li>
                 </ul>
             </div>
+            <div class="chatbox_sidebar__footer">
+                <button class="generate_resume">
+                    <i>Generate Resume</i>
+                </button>
+            </div>
         </div>
         <div class="chatbox__messages">
             <div></div>
