pushing before changing index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,10 +22,8 @@
                     <li>How to make a linkedIn?</li>
                 </ul>
             </div>
-            <div class="chatbox_sidebar__footer">
-                <button class="generate_resume">
-                    <i>Generate Resume</i>
-                </button>
+            <div class="chatbox_sidebar_footer">
+                <button class="generate_resume_button">Generate Resume</button>
             </div>
         </div>
         <div class="chatbox__messages">
