--- a/templates/index.html
+++ b/templates/index.html
@@ -26,14 +26,21 @@
                 <button class="generate_resume_button">Generate Resume</button>
             </div>
         </div>
-        <div class="chatbox__messages">
-            <div></div>
-        </div>
-        <div class = "chatbox__footer">
-            <input type="text" placeholder="Write a message..">
-            <button class="send__button">
-                <i class="fas fa-paper-plane"></i>
-            </button>
+        <div class="display_pane">
+            <div class="chatbox">
+                <div class="chatbox__messages">
+                    <div></div>
+                </div>
+                <div class = "chatbox__footer">
+                    <input type="text" placeholder="Write a message..">
+                    <button class="send__button">
+                        <i class="fas fa-paper-plane"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="resume_generator">
+                <object data="resume_form.html" type="text/html"></object>
+            </div>
         </div>
         <script src="../static/app.js"></script>
     </body>
