--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="display_pane">
-            <div class="chatbox">
+            <div class="chat_window">
                 <div class="chatbox__messages">
                     <div></div>
                 </div>
