--- a/templates/resume_form.html
+++ b/templates/resume_form.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Resume Form</title>
-        <link rel="stylesheet" href="../static/index_styles.css">
-        <script src="https://kit.fontawesome.com/a79e9c589c.js" crossorigin="anonymous"></script>
+        <!--<link rel="stylesheet" href="../static/index_styles.css">-->
     </head>
     <body>
         <h1>Fill out the form to generate resume</h1>
