--- a/templates/resume_form.html
+++ b/templates/resume_form.html
@@ -128,5 +128,6 @@
     
             <button type="submit">Submit</button>
         </form>
+        <script src="../static/form.js"></script>
     </body>
 </html>
