--- a/templates/index.html
+++ b/templates/index.html
@@ -43,4 +43,5 @@
             </div>
         </div>
         <script src="../static/app.js"></script>
+        <script src="../static/form.js"></script>
     </body>
