--- a/templates/resume_form.html
+++ b/templates/resume_form.html
@@ -113,6 +113,7 @@
                     <textarea id="experienceDescription" name="resume[0][experience][0][description]"></textarea>
                 </div>
             </div>
+            <button type="button" id="addExperienceButton">Add Experience</button>
 
             <!----------------------------------------------------------->
 
@@ -128,6 +129,6 @@
     
             <button type="submit">Submit</button>
         </form>
-        <script src="../static/form.js"></script>
+        <!--<script src="../static/form.js"></script>-->
     </body>
 </html>
