--- a/templates/resume_form.html
+++ b/templates/resume_form.html
@@ -129,6 +129,6 @@
     
             <button type="submit">Submit</button>
         </form>
-        <!--<script src="../static/form.js"></script>-->
+        <script src="../static/form.js"></script>
     </body>
 </html>
