--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Sheldon</title>
         <link rel="stylesheet" href="../static/index_styles.css">
         <script src="https://kit.fontawesome.com/a79e9c589c.js" crossorigin="anonymous"></script>
